--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
               </div>
             </div>
             <button class="btn btn-primary btn-lg btn-block" type="button" id="btnAgregar">Agregar</button>
+            <button class="btn btn-danger btn-lg btn-block" type="button" id="btnClear">Borrar todo</button>
             <hr class="mb-4">
             
             <!-- Insertar tabla aquí -->
